# temp

./: CMakeLists.txt  push.sh
lib/eEVM/: CMakeLists.txt
lib/eEVM/include/eEVM/: common.h  debug.h  rlp.h  util.h
lib/eEVM/include/eEVM/simple/: simpleaccount.h  simpleglobalstate.h
lib/eEVM/src/: common.cpp  processor.cpp  stack.cpp  transaction.cpp
lib/libf2f/: CMakeLists.txt
lntee/: lntee.edl  payload.proto
lntee/enclave/: CMakeLists.txt  main.cpp
lntee/enclave/include/: sgx_contract.h  util.h
lntee/enclave/src/: eth_ecdsa.cpp  main.cpp  sgx_contract.cpp  util.cpp
lntee/host/: CMakeLists.txt
lntee/host/contract/: ERC20.json  rpc.json
lntee/host/include/: Global.h  command.h  lntee_protocol.h  payload.pb.h
lntee/host/src/: Global.cpp  command.cpp  enclaveadapter.cpp  erc20_helper.cpp  main.cpp
